Add a dedicated icon for breadcrum / card level.

--- a/web/pwa/ngsw-config.json
+++ b/web/pwa/ngsw-config.json
@@ -50,6 +50,7 @@
           "/svg/copy-outline.svg",
           "/svg/document-outline.svg",
           "/svg/list-outline.svg",
+          "/svg/file-tray-outline.svg",
           "/assets/**",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
