--- a/src/cloudpilot/Makefile
+++ b/src/cloudpilot/Makefile
@@ -26,7 +26,7 @@ LDFLAGS_NATIVE ?=  \
 	$(shell sdl2-config --libs) -lSDL2_image \
 	-lreadline -lboost_coroutine -lboost_json
 
-CFLAGS_COMMON := -Werror -Wextra -Wall -Wno-unused-parameter -Wno-pragma-pack \
+CFLAGS_COMMON := -Werror -Wextra -Wall -Wno-unused-parameter -Wno-pragma-pack -Wno-multichar \
 	-DEMULATION_LEVEL=EMULATION_UNIX
 CXXFLAGS_COMMON := $(CFLAGS_COMMON) -std=c++17
 CFLAGS_COMMON := $(CFLAGS_COMMON) -std=c99
