--- a/src/vfs/Makefile
+++ b/src/vfs/Makefile
@@ -135,13 +135,13 @@ emscripten: $(BINARY_WEB_EMCC)
 test: $(BINARY_TEST)
 
 $(BINARY_NATIVE): $(OBJECTS_NATIVE)
-	$(LD_NATIVE) $(LDFLAGS_NATIVE) -o $@ $^
+	$(LD_NATIVE) -o $@ $^ $(LDFLAGS_NATIVE)
 
 $(BINARY_WEB_EMCC): $(OBJECTS_WEB_EMCC)
-	$(LD_EMCC) $(LDFLAGS_EMCC_WEB) -o $@ $^
+	$(LD_EMCC) -o $@ $^ $(LDFLAGS_EMCC_WEB)
 
 $(BINARY_TEST) : $(OBJECTS_TEST)
-	$(LD_NATIVE) $(LDFLAGS_TEST) -o $@ $^
+	$(LD_NATIVE) -o $@ $^ $(LDFLAGS_TEST)
 
 $(BUILDDIR_NATIVE)/%.o : %.c
 	$(MKDIR_NATIVE) && $(CC_NATIVE) $(DEPFLAGS_NATIVE) $(CFLAGS_COMMON) $(CFLAGS_NATIVE) $(INCLUDE) -c -o $@ $<
