Preliminary support for Acer S11.

--- a/src/cloudpilot/Makefile
+++ b/src/cloudpilot/Makefile
@@ -77,6 +77,7 @@ INCLUDE = \
 	-I./emulator/hardware \
 	-I./emulator/hardware/clie \
 	-I./emulator/hardware/handera \
+	-I./emulator/hardware/acer \
 	-I./emulator/uae \
 	-I./emulator/patch \
 	-I./emulator/patch/clie \
@@ -181,6 +182,8 @@ SOURCE_EMU = \
 	emulator/hardware/handera/EmTRGCFIO.cpp \
 	emulator/hardware/handera/EmTRGCFMem.cpp \
 	emulator/hardware/handera/EmTRGDiskIO.cpp \
+	emulator/hardware/acer/EmRegsAcerUSBStub.cpp \
+	emulator/hardware/acer/EmRegsVZAcerS1x.cpp \
 	emulator/patch/EmPatchModule.cpp \
 	emulator/patch/EmPatchModuleSys.cpp \
 	emulator/patch/EmPatchModuleHtal.cpp \
