--- a/web/package.json
+++ b/web/package.json
@@ -24,47 +24,48 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-eslint/builder": "14.4.0",
-    "@angular-eslint/eslint-plugin": "14.4.0",
-    "@angular-eslint/eslint-plugin-template": "14.4.0",
-    "@angular-eslint/schematics": "14.4.0",
-    "@angular-eslint/template-parser": "14.4.0",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
-    "eslint": "^8.28.0",
+    "@angular-eslint/builder": "15.2.0",
+    "@angular-eslint/eslint-plugin": "15.2.0",
+    "@angular-eslint/eslint-plugin-template": "15.2.0",
+    "@angular-eslint/schematics": "15.2.0",
+    "@angular-eslint/template-parser": "15.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1"
   },
   "dependencies": {
-    "@angular-builders/custom-webpack": "^14.0.0",
-    "@angular-devkit/build-angular": "^14.0.6",
-    "@angular/cli": "^14.0.6",
-    "@angular/common": "^14.0.6",
-    "@angular/compiler": "^14.0.6",
-    "@angular/compiler-cli": "^14.0.6",
-    "@angular/core": "^14.0.6",
-    "@angular/forms": "^14.0.6",
-    "@angular/language-service": "^14.0.6",
-    "@angular/platform-browser": "^14.0.6",
-    "@angular/platform-browser-dynamic": "^14.0.6",
-    "@angular/router": "^14.0.6",
-    "@angular/service-worker": "^14.0.6",
-    "@ionic/angular": "^6.1.14",
+    "@angular-builders/custom-webpack": "^15.0.0",
+    "@angular-devkit/build-angular": "^15.1.4",
+    "@angular/cli": "^15.1.4",
+    "@angular/common": "^15.1.3",
+    "@angular/compiler": "^15.1.3",
+    "@angular/compiler-cli": "^15.1.3",
+    "@angular/core": "^15.1.3",
+    "@angular/forms": "^15.1.3",
+    "@angular/language-service": "^15.1.3",
+    "@angular/platform-browser": "^15.1.3",
+    "@angular/platform-browser-dynamic": "^15.1.3",
+    "@angular/router": "^15.1.3",
+    "@angular/service-worker": "^15.1.3",
+    "@ionic/angular": "^6.5.2",
     "@ionic/angular-toolkit": "^7.0.0",
     "@types/deep-equal": "^1.0.1",
     "@types/emscripten": "^1.39.6",
-    "@types/jasmine": "~4.0.3",
+    "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
+    "@types/marked": "^4.0.8",
     "@types/md5": "^2.3.1",
-    "@types/node": "^18.0.6",
+    "@types/node": "^18.11.19",
     "@types/url-parse": "^1.4.6",
-    "@types/uuid": "^8.3.4",
-    "async-mutex": "^0.3.2",
+    "@types/uuid": "^9.0.0",
+    "async-mutex": "^0.4.0",
     "copy-webpack-plugin": "^11.0.0",
-    "deep-equal": "^2.0.5",
-    "dts-bundle-generator": "^6.12.0",
+    "deep-equal": "^2.2.0",
+    "dts-bundle-generator": "^7.2.0",
     "import-sort-style-eslint": "^6.0.0",
-    "jasmine-core": "~4.2.0",
+    "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -73,27 +74,27 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "md5": "^2.3.0",
     "microevent.ts": "^0.2.1",
-    "ngx-markdown": "^14.0.1",
-    "prettier": "^2.7.1",
+    "ngx-markdown": "^15.1.1",
+    "prettier": "^2.8.3",
     "prettier-plugin-import-sort": "^0.0.7",
-    "pwa-asset-generator": "^6.1.1",
+    "pwa-asset-generator": "^6.2.1",
     "raw-loader": "^4.0.2",
-    "rxjs": "~7.5.6",
+    "rxjs": "~7.8.0",
     "shelljs": "^0.8.5",
-    "svgo": "^2.8.0",
+    "svgo": "^3.0.2",
     "ts-loader": "^9.3.1",
     "ts-node": "~10.9.1",
-    "tslib": "^2.3.1",
-    "typedoc": "^0.23.8",
-    "typescript": "~4.7.4",
+    "tslib": "^2.5.0",
+    "typedoc": "^0.23.24",
+    "typescript": "~4.9.5",
     "url-parse": "^1.5.4",
     "uuid": "^9.0.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.9.3",
     "whatwg-fetch": "^3.6.2",
-    "worker-timers": "^7.0.44",
+    "worker-timers": "^7.0.62",
     "yet-another-abortcontroller-polyfill": "^0.0.4",
-    "zone.js": "~0.11.6"
+    "zone.js": "~0.12.0"
   },
   "description": "CloudpilotEmu PWA",
   "prettier": {
