--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -21,13 +21,26 @@
       "dom"
     ],
     "paths": {
-      "@common/*": ["common/*"],
-      "@native/*": ["../src/cloudpilot/*"],
-      "@native-fstools/*": ["../src/fstools/*"],
-      "@native-vfs/*": ["../src/vfs/*"],
-      "@pwa/*": ["pwa/src/app/*"],
-      "@embedded/*": ["embedded/src/*"]
-    }
+      "@common/*": [
+        "common/*"
+      ],
+      "@native/*": [
+        "../src/cloudpilot/*"
+      ],
+      "@native-fstools/*": [
+        "../src/fstools/*"
+      ],
+      "@native-vfs/*": [
+        "../src/vfs/*"
+      ],
+      "@pwa/*": [
+        "pwa/src/app/*"
+      ],
+      "@embedded/*": [
+        "embedded/src/*"
+      ]
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
