--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -20,9 +20,9 @@ INCLUDE_EXTRA ?=
 
 CFLAGS_COMMON := -Werror -Wextra -Wall -Wno-unused-parameter
 CXXFLAGS_COMMON := $(CFLAGS_COMMON) -std=c++17
-CFLAGS_COMMON := $(CFLAGS_COMMON) -std=c99
+CFLAGS_COMMON := $(CFLAGS_COMMON) -std=c99 -D_POSIX_SOURCE
 
-CFLAGS_EMCC = $(EMCC_OPT) -D_POSIX_SOURCE
+CFLAGS_EMCC = $(EMCC_OPT)
 CXXFLAGS_EMCC = $(CFLAGS_EMCC)  -fno-rtti -fno-exceptions
 
 CFLAGS_TEST ?= -O0 -g -fsanitize=address,undefined -fsanitize-blacklist=clang_blacklist.txt
