--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -57,12 +57,14 @@ SOURCE_CPP = \
 	CardImage.cpp \
 	CardVolume.cpp \
 	CPCrc.cpp \
-	GunzipContext.cpp
+	GunzipContext.cpp \
+	GzipContext.cpp
 
 SOURCE_TEST = \
 	$(SOURCE_CPP) \
 	test/Crc.cpp \
-	test/GunzipContext.cpp
+	test/GunzipContext.cpp \
+	test/GzipContext.cpp
 
 OBJECTS_NATIVE = $(SOURCE_C:%.c=$(BUILDDIR_NATIVE)/%.o) $(SOURCE_CPP:%.cpp=$(BUILDDIR_NATIVE)/%.o)
 OBJECTS_EMCC = $(SOURCE_C:%.c=$(BUILDDIR_EMCC)/%.o) $(SOURCE_CPP:%.cpp=$(BUILDDIR_EMCC)/%.o)
