Support gzipping memory cards.

--- a/src/fstools/Makefile
+++ b/src/fstools/Makefile
@@ -34,7 +34,10 @@ CXXFLAGS_TEST ?= $(CFLAGS_TEST)
 LDFLAGS_TEST ?= -fsanitize=address,undefined -fsanitize-blacklist=clang_blacklist.txt -lgtest -lgmock
 
 WEBIDL_BINDING_DIR = web/binding
-WEBIDL_BINDING_SRC = $(WEBIDL_BINDING_DIR)/fstools.idl ../common/web/gunzip.idl
+WEBIDL_BINDING_SRC = \
+	$(WEBIDL_BINDING_DIR)/fstools.idl \
+	../common/web/gunzip.idl  \
+	../common/web/gzip.idl
 WEBIDL_BINDING_JS = $(WEBIDL_BINDING_DIR)/binding.js
 WEBIDL_BINDING_IDL = $(WEBIDL_BINDING_DIR)/binding.idl
 WEBIDL_BINDING_CXX = web/binding.cpp
