--- a/src/fstools/Makefile
+++ b/src/fstools/Makefile
@@ -44,6 +44,7 @@ WEBIDL_BINDING_CXX = web/binding.cpp
 
 LDFLAGS_EMCC_WEB = $(EMCC_OPT) -Wno-version-check \
 	--post-js $(WEBIDL_BINDING_JS) \
+	-Wl,--stack-first \
 	-s NO_EXIT_RUNTIME=1 \
 	-s MODULARIZE=1 \
 	-s EXPORT_NAME=createModule \
@@ -51,7 +52,9 @@ LDFLAGS_EMCC_WEB = $(EMCC_OPT) -Wno-version-check \
 	-s ALLOW_MEMORY_GROWTH=1 \
 	-s ALLOW_TABLE_GROWTH=1 \
 	-s EXPORTED_FUNCTIONS=["_malloc","_free","_main"] \
-	-s INITIAL_MEMORY=16777216
+	-s INITIAL_MEMORY=16777216 \
+	-s STACK_SIZE=1MB \
+	-s GLOBAL_BASE=0
 
 BUILDDIR_NATIVE = .build
 DEPDIR_NATIVE = .deps
