--- a/.github/workflows/release-preview.yaml
+++ b/.github/workflows/release-preview.yaml
@@ -34,6 +34,9 @@ jobs:
       - name: Lint
         working-directory: web
         run: yarn lint
+      - name: Test
+        working-directory: web
+        run: yarn test
       - name: Build Cloudpilot embedded
         working-directory: web
         run: yarn dist-embedded
