--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
     "dist-embedded": "yarn build-embedded && yarn typedoc-embedded && node script/dist-embedded",
     "dts-bundle-embedded": "dts-bundle-generator --config dts-bundle-generator.json",
     "gen-revision": "echo \"export const REVISION = '`git rev-parse --short HEAD`';\" > pwa/src/revision.gen.ts",
-    "test": "ng test",
+    "test": "mocha common/test/*.ts",
     "lint": "eslint common embedded pwa",
     "pwa-icons": "pwa-asset-generator --opaque false --favicon --scrape --icon-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/icon.html pwa/src/assets-pwa",
     "pwa-splash": "pwa-asset-generator --scrape --splash-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
@@ -29,11 +29,13 @@
     "@angular-eslint/eslint-plugin-template": "15.2.0",
     "@angular-eslint/schematics": "15.2.0",
     "@angular-eslint/template-parser": "15.2.0",
+    "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "mocha": "^10.2.0"
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^15.1.4",
@@ -81,7 +83,7 @@
     "rxjs": "~7.8.0",
     "shelljs": "^0.8.5",
     "ts-loader": "^9.3.1",
-    "ts-node": "~10.9.1",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typedoc": "^0.23.24",
     "typescript": "~4.9.5",
