Remove karma & jasmine.

--- a/web/pwa/.eslintrc.json
+++ b/web/pwa/.eslintrc.json
@@ -10,8 +10,7 @@
       ],
       "parserOptions": {
         "project": [
-          "pwa/tsconfig.app.json",
-          "pwa/tsconfig.spec.json"
+          "pwa/tsconfig.app.json"
         ],
         "createDefaultProgram": true
       },
