Basic connection handling.

--- a/src/cloudpilot/Makefile
+++ b/src/cloudpilot/Makefile
@@ -267,6 +267,7 @@ SOURCE_NATIVE = \
 	native/Cli.cpp \
 	native/ProxyClient.cpp \
 	native/ProxyHandler.cpp \
+	native/GdbStub.cpp \
 	emulator/assert_native.cpp \
 	emulator/stacktrace.cpp
 
