--- a/web/pwa/tsconfig.app.json
+++ b/web/pwa/tsconfig.app.json
@@ -9,7 +9,7 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/main.ts",
+    "src/**/*.ts",
     "src/**/*.d.ts",
     "../common/**/*.ts",
     "../common/**/*.d.ts",
