Add a tool for fixing up broken databases.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -135,7 +135,10 @@
     "${workspaceFolder}/server"
   ],
   "[python]": {
-    "editor.codeActionsOnSave": {"source.organizeImports": true}
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    },
+    "editor.defaultFormatter": "ms-python.autopep8"
   },
   "typescript.tsdk": "./cloudpilot-ionic/node_modules/typescript/lib",
   "eslint.workingDirectories": [{"directory": "web", "!cwd": false}],
@@ -152,5 +155,6 @@
     "Keychain",
     "proxied",
     "trackpad"
-  ]
+  ],
+  "python.formatting.provider": "none"
 }
