Sorta work around iOS 17 bug by patching the service worker.

--- a/.github/workflows/release-preview.yaml
+++ b/.github/workflows/release-preview.yaml
@@ -45,6 +45,7 @@ jobs:
         run: |
           yarn run gen-revision
           yarn ng run app:build:production,preview,ci --base-href /app-preview/
+          yarn fix-worker
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.7.0
         with:
