--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -68,6 +68,7 @@ jobs:
         run: |
           yarn run gen-revision
           yarn ng run app:build:production,ci --base-href /app/
+          yarn fix-worker
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.5.1
         with:
