Replace ngsw with workbox.

--- a/.github/workflows/release-preview.yaml
+++ b/.github/workflows/release-preview.yaml
@@ -44,8 +44,8 @@ jobs:
         working-directory: web
         run: |
           yarn run gen-revision
-          yarn ng run app:build:production,preview,ci --base-href /app-preview/
-          yarn fix-worker
+          yarn build --base-href /app-preview/
+          yarn generate-worker
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.7.0
         with:
