--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "yarn run gen-revision && ng run app:build:production,ci",
+    "build-preview": "yarn run gen-revision && ng run app:build:production,preview,ci",
     "generate-worker": "workbox generateSW ./workbox.config.js",
     "build-embedded": "yarn run dts-bundle-embedded && yarn webpack --mode production -c webpack.embedded.config.js",
     "start-embedded": "yarn webpack serve --mode development -c webpack.embedded.config.js",
