Add content hashes to wasm and markdown.

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -38,7 +38,13 @@
       ],
       "@embedded/*": [
         "embedded/src/*"
-      ]
+      ],
+      "@assets/*": [
+        "pwa/src/assets/*"
+      ],
+      "@root/*": [
+        "../*"
+      ],
     },
     "useDefineForClassFields": false
   },
