--- a/web/angular.json
+++ b/web/angular.json
@@ -11,16 +11,19 @@
       "schematics": {},
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "outputPath": "build-pwa",
             "index": "pwa/src/index.html",
             "main": "pwa/src/main.ts",
             "polyfills": "pwa/src/polyfills.ts",
             "tsConfig": "pwa/tsconfig.app.json",
+            "customWebpackConfig": {
+              "path": "./webpack.angular.config.js"
+            },
             "assets": [
               {
-                "glob": "**/*",
+                "glob": "*",
                 "input": "pwa/src/assets",
                 "output": "assets"
               },
@@ -33,26 +36,6 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
-              },
-              {
-                "glob": "cloudpilot_web.wasm",
-                "input": "../src/cloudpilot",
-                "output": "."
-              },
-              {
-                "glob": "fstools_web.wasm",
-                "input": "../src/fstools",
-                "output": "."
-              },
-              {
-                "glob": "vfs_web.wasm",
-                "input": "../src/vfs",
-                "output": "."
-              },
-              {
-                "glob": "CHANGELOG.md",
-                "input": "..",
-                "output": "assets/doc"
               },
               "pwa/src/manifest.webmanifest"
             ],
@@ -121,7 +104,7 @@
           "defaultConfiguration": ""
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "app:build"
           },
@@ -133,13 +116,13 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "@angular-builders/custom-webpack:extract-i18n",
           "options": {
             "browserTarget": "app:build"
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/custom-webpack:karma",
           "options": {
             "main": "pwa/src/test.ts",
             "polyfills": "pwa/src/polyfills.ts",
