--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^16.0.1",
     "@angular-eslint/builder": "16.1.1",
     "@angular-eslint/eslint-plugin": "16.1.1",
     "@angular-eslint/eslint-plugin-template": "16.1.1",
