Save some space by removing emscripten FS.

--- a/src/vfs/Makefile
+++ b/src/vfs/Makefile
@@ -45,6 +45,7 @@ LDFLAGS_EMCC_WEB = $(EMCC_OPT) -Wno-version-check \
 	-s MODULARIZE=1 \
 	-s EXPORT_NAME=createModule \
 	-s ENVIRONMENT="web,worker" \
+	-s FILESYSTEM=0 \
 	-s ALLOW_MEMORY_GROWTH=1 \
 	-s ALLOW_TABLE_GROWTH=1 \
 	-s EXPORTED_FUNCTIONS=["_malloc","_free","_main"] \
