--- a/src/fstools/Makefile
+++ b/src/fstools/Makefile
@@ -50,6 +50,7 @@ LDFLAGS_EMCC_WEB = $(EMCC_OPT) -Wno-version-check \
 	-s EXPORT_NAME=createModule \
 	-s ENVIRONMENT="web,worker" \
 	-s ALLOW_MEMORY_GROWTH=1 \
+	-s FILESYSTEM=0 \
 	-s ALLOW_TABLE_GROWTH=1 \
 	-s EXPORTED_FUNCTIONS=["_malloc","_free","_main"] \
 	-s INITIAL_MEMORY=16777216 \
