Fix marked mess.

--- a/web/package.json
+++ b/web/package.json
@@ -57,7 +57,6 @@
     "@ionic/angular-toolkit": "^10.0.0",
     "@types/deep-equal": "^1.0.4",
     "@types/emscripten": "^1.39.10",
-    "@types/marked": "^6.0.0",
     "@types/md5": "^2.3.5",
     "@types/node": "^20.5.4",
     "@types/url-parse": "^1.4.6",
@@ -67,6 +66,7 @@
     "deep-equal": "^2.2.3",
     "dts-bundle-generator": "^9.0.0",
     "import-sort-style-eslint": "^6.0.0",
+    "marked": "^9.0.0",
     "md5": "^2.3.0",
     "microevent.ts": "^0.2.1",
     "ngx-markdown": "^17.1.1",
