Improive UI consistency, add action menu for cards and sessions.

--- a/web/package.json
+++ b/web/package.json
@@ -102,6 +102,12 @@
         "options": {
           "parser": "angular"
         }
+      },
+      {
+        "files": "*.component.html",
+        "options": {
+          "parser": "angular"
+        }
       }
     ]
   },
