--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -136,7 +136,7 @@
   ],
   "[python]": {
     "editor.codeActionsOnSave": {
-      "source.organizeImports": true
+      "source.organizeImports": "explicit"
     },
     "editor.defaultFormatter": "ms-python.autopep8"
   },
