Use official stack overflow check.

--- a/src/cloudpilot/Makefile
+++ b/src/cloudpilot/Makefile
@@ -44,9 +44,9 @@ WEBIDL_BINDING_CXX = web/binding.cpp
 
 LDFLAGS_EMCC_WEB = $(EMCC_OPT) -Wno-version-check \
 	--post-js $(WEBIDL_BINDING_JS) \
-	-Wl,--stack-first \
 	-s NO_EXIT_RUNTIME=1 \
 	-s MODULARIZE=1 \
+	-s STACK_OVERFLOW_CHECK=1 \
 	-s EXPORT_NAME=createModule \
 	-s ENVIRONMENT="web,worker" \
 	-s ALLOW_MEMORY_GROWTH=1 \
@@ -55,8 +55,7 @@ LDFLAGS_EMCC_WEB = $(EMCC_OPT) -Wno-version-check \
 	-s FILESYSTEM=0 \
 	-s EXPORTED_FUNCTIONS=["_malloc","_free","_main"] \
 	-s EXTRA_EXPORTED_RUNTIME_METHODS=["addFunction","UTF8ToString"] \
-	-s STACK_SIZE=1MB \
-	-s GLOBAL_BASE=0
+	-s STACK_SIZE=1MB
 
 BUILDDIR_NATIVE = .build
 DEPDIR_NATIVE = .deps
